@@ -6,6 +6,11 @@
 
                                   Changelog
 
+Daniel Stenberg (5 Sep 2008)
+- Dmitriy Sergeyev pointed out that curl_easy_pause() didn't unpause properly
+  during certain conditions. I also changed this code to use realloc() based
+  on Daniel Fandrich's suggestion.
+
 Guenter Knauf (4 Sep 2008)
 - MingW32 non-configure builds are now largefile feature enabled by default.
   NetWare LIBC builds are also now largefile feature enabled by default.
